<resources xmlns:xliff="http://schemas.android.com/tools">

    <!-- APP CONFIGS -->

    <string name="app_name">Sunshine</string>

    <!-- SETTINGS PREFERENCE -->

    <string name="location_preference_key">location_preference</string>
    <string name="location_preference_value">Kolkata</string>

    <string name="units_preference_key">units_preference</string>
    <string name="units_preference_value">metric</string>

    <!-- PLACEHOLDER STRINGS -->

    <string name="day_text_view_ph_text">Today</string>
    <string name="weather_type_text_view_ph_text">Clear</string>
    <string name="max_temp_text_view_ph_text">20</string>
    <string name="min_temp_text_view_ph_text">13</string>
    <string name="weather_type_image_view_cd">Weather Type Icon</string>
    <string name="day_month_date_text_view_ph_text">Today, June 18</string>

    <!-- TEXT FORMATS -->

    <string name="format_day_month_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="month">%2$s</xliff:g> <xliff:g id="date">%3$d</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_humidity">HUMIDITY: <xliff:g id="humidity">%1$d</xliff:g>%%</string>
    <string name="format_wind">WIND: <xliff:g id="wind_speed">%1.0f</xliff:g> km/H</string>
    <string name="format_pressure">PRESSURE: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

</resources>
